se implementan las clases necesarias para procesar los pagos